feat: protect GET /user/{id}, implement logout and /me endpoint
